# my_first_project

./: pyproject.toml
hello2/scripts/: say_hello.py
