[tool.poetry]
name = "hello2"
version = "0.1.0"
description = ""
authors = ["Юрий <zub-69-z@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.5"

[tool.poetry.scripts]
say-hello = "hello2.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
